--- a/index.html
+++ b/index.html
@@ -1,37 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Age calculator app</title>
+  </head>
+  <body>
+    <main>
+      <form id="date-form" novalidate>
+        <div>
+          <label for="day">
+            <span>Day</span>
+            <input
+              type="number"
+              name="day"
+              id="day"
+              min="1"
+              max="31"
+              step="1"
+              placeholder="DD"
+              maxlength="2"
+              value="24"
+              required
+            />
+            <span class="error" aria-live="polite"></span>
+          </label>
+          <label for="month">
+            <span>Month</span>
+            <input
+              type="number"
+              name="month"
+              id="month"
+              min="1"
+              max="12"
+              step="1"
+              placeholder="MM"
+              maxlength="2"
+              value="09"
+              required
+            />
+            <span class="error" aria-live="polite"></span>
+          </label>
+          <label for="year">
+            <span>Year</span>
+            <input
+              type="number"
+              name="year"
+              id="year"
+              min="100"
+              max="2023"
+              step="1"
+              placeholder="YYYY"
+              maxlength="4"
+              value="1984"
+              required
+            />
+            <span class="error" aria-live="polite"></span>
+          </label>
+        </div>
 
-  Day
-  DD
+        <button type="submit">
+          <img src="assets/images/icon-arrow.svg" alt="Arrow down" />
+        </button>
+      </form>
 
-  Month
-  MM
+      <hr />
 
-  Year
-  YYYY
+      <div id="result">
+        <div><span>--</span><span>years</span></div>
+        <div><span>--</span><span>months</span></div>
+        <div><span>--</span><span>days</span></div>
+      </div>
+    </main>
 
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
